--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,8 @@
-/* Estilos generales que se aplican a todos los dispositivos */
 * {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  }
-  
-  body {
+}
+
+body {
     margin: 0;
     color: #fff;
     background-color: #fcfcfc;
@@ -11,9 +10,9 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-  }
-  
-  .app {
+}
+
+.app {
     background-color: #252d4a;
     max-width: 650px;
     min-width: 450px;
@@ -24,30 +23,104 @@
     box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
     display: flex;
     justify-content: space-evenly;
-  }
-  
-  /* Estilos específicos para dispositivos móviles */
-  @media screen and (max-width: 768px) {
-    .app {
-      flex-direction: column;
-      padding: 10px;
-      min-width: auto;
-    }
-    
-    .lado-izquierdo, .lado-derecho {
-      width: 100%;
-    }
-    
-    .pregunta-numero span {
-      font-size: 20px;
-    }
-  
-    .correct, .incorrect {
-      font-size: 14px;
-    }
-  
-    .game-over-message {
-      font-size: 20px;
-    }
-  }
-  
+}
+
+/* PREGUNTAS */
+.lado-izquierdo {
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.pregunta-numero {
+    margin-bottom: 20px;
+}
+
+.pregunta-numero span {
+    font-size: 28px;
+}
+
+.pregunta-titulo {
+    margin-bottom: 12px;
+}
+
+.lado-derecho {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* FINALIZADO */
+.juego-terminado {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-size: 24px;
+    align-items: center;
+}
+
+/* GRAL */
+button {
+    width: 100%;
+    font-size: 16px;
+    color: #ffffff;
+    background-color: #252d4a;
+    border-radius: 15px;
+    display: flex;
+    padding: 5px;
+    justify-content: flex-start;
+    align-items: center;
+    border: 5px solid #234668;
+    cursor: pointer;
+}
+
+.tiempo-restante {
+    font-size: 14px;
+    color: #fcbf3d;
+    margin-bottom: 20px;
+}
+
+.correct,
+.correct:hover {
+    background-color: #2f922f;
+}
+
+.incorrect,
+.incorrect:hover {
+    background-color: #ff3333;
+}
+
+.btns-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+button:hover {
+    background-color: #234668;
+}
+
+button[disabled] {
+    background-color: #555e7d;
+    color: #ffffff;
+    cursor: not-allowed;
+}
+
+button:focus {
+    outline: none;
+}
+
+button svg {
+    margin-right: 5px;
+}
+
+.game-over-message {
+    text-align: center;
+    /* Centrar el texto horizontalmente */
+    font-size: 24px;
+    /* Aumentar el tamaño del texto */
+    /* Otros estilos si los necesitas */
+
+}
